--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_alarms"
         android:icon="@drawable/ic_alarm_white_24dp"
         android:title="@string/title_alarms" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_payment_settings"
         android:icon="@drawable/ic_credit_card_white_24dp"
         android:title="@string/title_payment_settings" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_history"
         android:icon="@drawable/ic_history_white_24dp"
         android:title="@string/title_history" />
 
