--- a/app/src/main/res/layout/payment_settings_layout.xml
+++ b/app/src/main/res/layout/payment_settings_layout.xml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/title_payment_settings" />
+        android:layout_height="wrap_content"
+        android:text="@string/card_information"
+        android:layout_marginBottom="10dp"
+        android:textSize="18sp"/>
 
-</FrameLayout>
+    <com.devmarvel.creditcardentry.library.CreditCardForm
+        android:id="@+id/credit_card_form"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:input_background="@drawable/card_input_background"
+        app:include_zip="false" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/select_charities"
+        android:layout_marginBottom="10dp"
+        android:textSize="18sp"/>
+
+    <ListView
+        android:id="@+id/charity_list"
+        android:layout_width="match_parent"
+        android:layout_height="140dp">
+    </ListView>
+
+    <Button
+        android:id="@+id/save_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/save_settings" />
+
+
+</LinearLayout>
