--- a/app/src/main/res/layout/alarms_layout.xml
+++ b/app/src/main/res/layout/alarms_layout.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:weightSum="1">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:text="@string/select_alarms"
+        android:textSize="18sp"
+        android:layout_weight="0.12" />
+
+    <ListView
+        android:id="@+id/alarm_list"
+        android:layout_width="match_parent"
+        android:layout_height="270dp"
+        android:layout_weight="0.78"
+        android:layout_marginBottom="10dp"></ListView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addAlarm"
-        android:layout_width="wrap_content"
+        android:layout_width="67dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="8dp"
@@ -14,6 +33,6 @@
         android:layout_marginRight="8dp"
         android:src="@drawable/ic_alarm_add_white_24dp"
         app:elevation="4dp"
-        />
+        android:layout_weight="0.12" />
 
-</FrameLayout>
+</LinearLayout>
